# claude-memory

./: CLAUDE.md  Cargo.toml  README.md  deploy.sh
.github/workflows/: ci.yml
docs/: brief-2026-05-16.md
docs/benchmarks/: page-index-2026-05-10.md
docs/plans/: 2026-04-28-analyzer-and-memory-units.md  memory-units-notability-frame.md
docs/specs/: friction-memory-creation.md  kb-markdown-export.md  kb-page-index.md  kb-summary-and-vector-retirement.md  memory-units.md  notable-fact-ingestion.md  page-index-parity.md  prompt-answer-history.md  storage-migration.md
docs/wiki/: index.md  log.md
docs/wiki/learnings/: retrieval-flow-lessons.md
docs/wiki/systems/: friction-memory-creation.md  kb-markdown-export.md  kb-summary-and-vector-retirement.md  memory-units.md  notable-fact-ingestion.md  page-index-parity.md  prompt-answer-history.md  retrieval-flows.md  (+1 more)
src/: analyze.rs  backfill.rs  chunk.rs  config.rs  daily.rs  dedup.rs  embed.rs  enrich_cmd.rs  extract.rs  graph.rs  graph_cmds.rs  index.rs  index_search.rs  index_tests.rs  index_writer.rs  indexing_cmds.rs  kb_export.rs  kb_ingest.rs  kb_page_index_cli.rs  kb_search.rs  kb_search_markdown.rs  kb_search_model.rs  kb_search_tests.rs  kb_search_text.rs  lib.rs  llm.rs  main.rs  main_tests.rs  memory_unit.rs  migration.rs  notable_fact.rs  page_index.rs  page_index_agentic.rs  page_index_codex.rs  page_index_tests.rs  qdrant_hybrid.rs  transcript_page_index_cli.rs
src/graph/: clean.rs  clean_tests.rs  sanitize.rs  tests.rs
src/index/: search_results.rs
tests/: kb_export.rs  kb_page_index_cli.rs
(+14 files in other folders)
